[gd_scene load_steps=4 format=3 uid="uid://beaemem0gqybq"]

[ext_resource type="Script" path="res://src/UI/Menus/Spellcrafting.gd" id="1_6y6vn"]
[ext_resource type="PackedScene" uid="uid://di2yl87nbglhm" path="res://src/UI/Button.tscn" id="2_hj65o"]
[ext_resource type="Texture2D" uid="uid://cc8vh3pgvddeh" path="res://Sprites/UI/Checkmark.png" id="3_2img3"]

[node name="Spellcrafting" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6y6vn")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BaseScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvailableBlocks" type="ScrollContainer" parent="BaseScreen"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_top = 64.0
offset_right = 320.0
offset_bottom = 720.0

[node name="BlockController" type="VBoxContainer" parent="BaseScreen/AvailableBlocks"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" parent="BaseScreen/AvailableBlocks/BlockController" instance=ExtResource("2_hj65o")]
layout_mode = 2

[node name="TextureButton2" parent="BaseScreen/AvailableBlocks/BlockController" instance=ExtResource("2_hj65o")]
layout_mode = 2
size_flags_horizontal = 0

[node name="Abilities" type="ScrollContainer" parent="BaseScreen"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_left = 320.0
offset_top = 64.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="BlockController" type="VBoxContainer" parent="BaseScreen/Abilities"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton3" parent="BaseScreen/Abilities/BlockController" instance=ExtResource("2_hj65o")]
layout_mode = 2
size_flags_horizontal = 0

[node name="Back" type="TextureButton" parent="BaseScreen"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 88.0
offset_bottom = 48.0
texture_normal = ExtResource("3_2img3")

[node name="Label" type="Label" parent="BaseScreen/Back"]
layout_mode = 0
offset_left = 32.0
offset_top = 3.0
offset_right = 72.0
offset_bottom = 29.0
text = "Back"

[node name="ActionBuilder" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvailableBlocks" type="ScrollContainer" parent="ActionBuilder"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_right = 320.0
offset_bottom = 720.0

[node name="BlockController" type="VBoxContainer" parent="ActionBuilder/AvailableBlocks"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" parent="ActionBuilder/AvailableBlocks/BlockController" instance=ExtResource("2_hj65o")]
layout_mode = 2

[node name="TextureButton2" parent="ActionBuilder/AvailableBlocks/BlockController" instance=ExtResource("2_hj65o")]
layout_mode = 2
size_flags_horizontal = 0

[node name="BlockEditor" type="ScrollContainer" parent="ActionBuilder"]
custom_minimum_size = Vector2(852, 0)
layout_mode = 2
offset_left = 320.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Lines" type="VBoxContainer" parent="ActionBuilder/BlockEditor"]
layout_mode = 2

[connection signal="pressed" from="BaseScreen/Back" to="." method="back"]
